tests/NormalTests/paczka1/fuzzy1/12034828.err
Error in line 3: qc4y4w A943 73,3
Error in line 14: Bbgw9z76t A324 96,2
Error in line 9: DeinDsB1 A324 8,0
Error in line 30: DeinDsB1 S128 15,4
Error in line 26: vrud9l A324 166,0
